# SimpleRS_DLLs

./: CMakeLists.txt  README.md
DLL/: main.cpp
Injector/: main.cpp
PrivEscalationVBScript/: Fake_UAC.vbs  main.cpp
